<resources>
    <string name="app_name">AnKopiRun</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="kopi_run">Kopi Run!</string>
    <string name="who_are_you">Who are you?</string>
    <string name="your_name">Your Name</string>
    <string name="where_to">Where to?</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="i_m_done">I\'m done</string>
    <string name="start_time">Wait for it ...</string>
    <string name="orders">Incoming Orders!</string>
    <string name="make_order">Make your order:</string>
    <string name="initials">Initials</string>
    <string name="what_do_you_want">What do you want?</string>
    <string name="select_a_run">Select a Run</string>
    <string name="too_bad">TOO BAD!!!</string>
</resources>
