<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pivotal.io.ankopirun.MainActivity">

    <ImageView
        style="@style/LogoStyle"
        android:src="@drawable/kopirun"/>

    <TextView
        style="@style/TitleStyle"
        android:text="@string/kopi_run" />

    <Button
        android:id="@+id/create_btn"
        style="@style/ButtonStyle"
        android:text="@string/create"/>

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/join_btn"
        style="@style/ButtonStyle"
        android:text="@string/join"/>

</LinearLayout>
